<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buddhist Texts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_back">Back</string>
    <string name="menu_forward">Next</string>
    <string name="menu_font_minus">Decrease Text</string>
    <string name="menu_font_plus">Increase Text</string>
    <string name="menu_fullscreen">Fullscreen</string>
    <string name="menu_text">Select Text</string>

        <string name="DN">DN</string>
    	<string name="MN">MN</string>
    	<string name="SN">SN</string>
    	<string name="AN">AN</string>
    	<string name="DH">Dhp</string>
    	<string name="JA">Jat</string>
    	<string name="VI">Vism</string>
    
    
    <string name="start_book">Already at start of book.</string>
    <string name="end_book">Already at end of book.</string>
    
    <string name="archive_dir">Location of Archive</string>
    
        
    <string name="pali">Pali</string>
    <string name="english">English</string>
    <string name="preferences_title">Buddhist Texts Preferences</string>
    <string name="misc_prefs">Misc. Preferences</string>
    <string name="style_prefs">Style Preferences</string>
    
    <string name="verify_unzip">Unzip Archive?</string>
    <string name="verify_unzip_message">Archive found on External Storage; Unzip?</string>
    <string name="unzipping">Unzipping Archive</string>
    <string name="unzipped">Archive Unzipped</string>
    
    
</resources>