<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/menu_text"
	    android:icon="@android:drawable/ic_menu_more"
		android:title="@string/menu_text"
		android:showAsAction="ifRoom|withText" 
		android:orderInCategory="20"
		>
		<menu>
		    <group android:id="@+id/group_text">
				<item 
				    android:id="@+id/menu_DN" 
				    android:title="@string/DN"
				    android:checkable="true"
				    />		        
				<item 
				    android:id="@+id/menu_MN" 
				    android:title="@string/MN"
				    android:checkable="true"
				    />
				<item 
				    android:id="@+id/menu_SN" 
				    android:title="@string/SN"
				    android:checkable="true"
				    />
				<item 
				    android:id="@+id/menu_AN" 
				    android:title="@string/AN"
				    android:checkable="true"
				    />
				<item 
				    android:id="@+id/menu_DH" 
				    android:title="@string/DH"
				    android:checkable="true"
				    />
				<item 
				    android:id="@+id/menu_JA" 
				    android:title="@string/JA"
				    android:checkable="true"
				    />
				<item 
				    android:id="@+id/menu_VI" 
				    android:title="@string/VI"
				    android:checkable="true"
				    />
			</group>
		</menu>
	</item>
    <item
		android:id="@+id/menu_settings"
		android:icon="@android:drawable/ic_menu_manage"
		android:orderInCategory="100"
        android:showAsAction="ifRoom"
		android:title="@string/menu_settings"
		/>
  	<item android:id="@+id/menu_back"
		android:icon="@drawable/ic_menu_back"
        android:orderInCategory="10"
		android:showAsAction="always"
		android:title="@string/menu_back" /> 
  	<item android:id="@+id/menu_forward"
		android:icon="@drawable/ic_menu_forward"
        android:orderInCategory="10"
		android:showAsAction="always"
		android:title="@string/menu_forward" /> 
  	<item
        android:id="@+id/menu_search"
        android:orderInCategory="50"
		android:icon="@android:drawable/ic_menu_search"
		android:showAsAction="ifRoom|withText"
        android:title="@string/menu_search"/>
    
</menu>